# minimum-viable-predictions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
mvp/: base_job.py  config.py
mvp/sportsbookreview/: __init__.py  base_sbr.py  sbr_config.py
tests/: test_base_job.py  test_base_sbr.py
