[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimum-viable-predictions"
version = "0.1.0"
description = "Sports-betting prediction engine"
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"

# ← Add this block:
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "isort",
  "flake8",
  "pre-commit",
  "mypy>=1.5.1",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.10
strict = true
disallow_untyped_calls = true
